fix(overview): Main overview graph is shifted on right side
fix #166

--- a/src/resources/styles/compodoc.css
+++ b/src/resources/styles/compodoc.css
@@ -696,5 +696,6 @@ path.link {
 }
 
 #module-graph-svg svg {
+    width: 100%;
     height: 100%;
 }
